Fix menu not displaying on small screens

--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -35,6 +35,7 @@
     }
     @media (scripting: enabled) {
       h1 {
+        display: inline-block;
         position: relative;
         z-index: 1;
         &:has(~ #menu button.open) {
